tests/negative/scope/interface-name-imported-and-defined/err.expected
ERROR:
The name `Foo` had already been bound at beta.smol:5:11-5:14:
         4 | 
         5 | interface Foo {}
           |           ^^^

However, it was imported again at beta.smol:3:14-3:17:
         2 | 
         3 | import alpha:Foo;
           |              ^^^
         4 | 
